[gd_scene load_steps=21 format=2]

[ext_resource path="res://SCRIPTS/instructions_car.gd" type="Script" id=5]
[ext_resource path="res://SPRITES/icon_a.png" type="Texture" id=11]
[ext_resource path="res://SPRITES/icon_w_dark.png" type="Texture" id=12]
[ext_resource path="res://SPRITES/police_car_1-1.png" type="Texture" id=13]
[ext_resource path="res://SPRITES/icon_s.png" type="Texture" id=14]
[ext_resource path="res://SPRITES/icon_d_dark.png" type="Texture" id=15]
[ext_resource path="res://SPRITES/icon_a_dark.png" type="Texture" id=16]
[ext_resource path="res://SPRITES/icon_d.png" type="Texture" id=17]
[ext_resource path="res://SPRITES/icon_s_dark.png" type="Texture" id=18]
[ext_resource path="res://SPRITES/icon_w.png" type="Texture" id=19]
[ext_resource path="res://SPRITES/police_car_1-1_down.png" type="Texture" id=20]
[ext_resource path="res://SPRITES/empty.png" type="Texture" id=21]
[ext_resource path="res://SPRITES/space_icon.png" type="Texture" id=22]
[ext_resource path="res://SPRITES/fridge.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="instructions_car" type="Node2D"]
script = ExtResource( 5 )

[node name="back_instructions" type="Sprite" parent="."]
position = Vector2( 824, 496 )
scale = Vector2( 37.16, 20 )
texture = ExtResource( 23 )

[node name="icon_w" type="AnimatedSprite" parent="."]
position = Vector2( 128, 128 )
frames = SubResource( 1 )

[node name="icon_s" type="AnimatedSprite" parent="."]
position = Vector2( 128, 448 )
frames = SubResource( 2 )

[node name="icon_a" type="AnimatedSprite" parent="."]
position = Vector2( 768, 320 )
frames = SubResource( 3 )

[node name="icon_d" type="AnimatedSprite" parent="."]
position = Vector2( 1472, 320 )
frames = SubResource( 4 )

[node name="car_demostration_1" type="AnimatedSprite" parent="."]
position = Vector2( 384, 472 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )

[node name="car_demostration_2" type="AnimatedSprite" parent="."]
position = Vector2( 1168, 344 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )

[node name="icon_space" type="AnimatedSprite" parent="."]
position = Vector2( 736, 752 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 6 )
frame = 1
playing = true
